--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,14 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "com.example.covid19sistemas7mo"
-        minSdkVersion 17
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -34,4 +39,10 @@ dependencies {
     implementation project(path: ':jsoup-1.13.1')
 
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:+'
+    implementation 'com.squareup.retrofit2:converter-gson:+'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    compile 'com.squareup.picasso:picasso:+'
+
+
 }
